--- a/README.org
+++ b/README.org
@@ -21,7 +21,9 @@ The soft yet colorful colorscheme.
 
 ** Ports
 The colorscheme is proudly a part of:
-- [Hazakura for Emacs](https://github.com/devraza/hazakura-emacs) and subsequently, [Dianciemacs](https://github.com/devraza/dianciemacs)
-- [Ambition](https://github.com/devraza/ambition)
+- [[https://github.com/devraza/hazakura-emacs][Hazakura for Emacs]] and subsequently, [[https://github.com/devraza/dianciemacs][Dianciemacs]]
+- [[https://github.com/devraza/ambition][Ambition]]
 
-> More ports will come as time passes! With the help of the table above, you're also free to create your own.
+#+begin_quote
+More ports will come as time passes! With the help of the table above, you're also free to create your own.
+#+end_quote
